[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "phytorchx"
description = "Small utiilities package for PyTorch"
authors = [{name = "Kosio Karchev", email = "kosiokarchev@gmail.com"}]

readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]

requires-python = ">=3.9"

dependencies = [
    "more-itertools",
    "optree",
    "torch",
]

dynamic = ["version"]

[project.urls]
"GitHub" = "https://github.com/kosiokarchev/phytorchx"
"Read the Docs" = "https://phytorchx.readthedocs.org/"

[tool.setuptools.packages.find]
include = ["phytorchx*"]

[tool.setuptools.package-data]
phytorchx = ["**/*.pyi"]

[tool.setuptools_scm]
version_file = "phytorchx/_version.py"
version_scheme = "no-guess-dev"
